added extent reports and listners

--- a/test-output/old/EbankingApp/methods-alphabetical.html
+++ b/test-output/old/EbankingApp/methods-alphabetical.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>EbankingApp</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="836f6a">  <td>24/10/02 22:42:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithInvalidCredentials()[pri:2, instance:com.bank.tests.LoginTest@4c402120]">loginWithInvalidCredentials</td> 
+<tr bgcolor="626db4">  <td>24/10/03 16:53:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.failure()[pri:3, instance:com.bank.tests.LoginTest@3b69e7d1]">failure</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="836f6a">  <td>24/10/02 22:42:22</td>   <td>-3128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithValidCredentials()[pri:1, instance:com.bank.tests.LoginTest@4c402120]">loginWithValidCredentials</td> 
+<tr bgcolor="626db4">  <td>24/10/03 16:53:15</td>   <td>1330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.failure2()[pri:4, instance:com.bank.tests.LoginTest@3b69e7d1]">failure2</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6e8f8e">  <td>24/10/02 22:42:17</td>   <td>-8814</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.bank.tests.LoginTest@4c402120]">&gt;&gt;setUp</td> 
+<tr bgcolor="626db4">  <td>24/10/03 16:53:12</td>   <td>-1695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithInvalidCredentials()[pri:2, instance:com.bank.tests.LoginTest@3b69e7d1]">loginWithInvalidCredentials</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="626db4">  <td>24/10/03 16:53:09</td>   <td>-4361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithValidCredentials(org.testng.ITestContext)[pri:1, instance:com.bank.tests.LoginTest@3b69e7d1]">loginWithValidCredentials</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>24/10/03 16:53:03</td>   <td>-10598</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.bank.tests.LoginTest@3b69e7d1]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6e8f8e">  <td>24/10/02 22:42:28</td>   <td>2053</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.bank.tests.LoginTest@4c402120]">&lt;&lt;tearDown</td> 
+<tr bgcolor="626db4">  <td>24/10/03 16:53:15</td>   <td>1328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.skipped()[pri:0, instance:com.bank.tests.LoginTest@3b69e7d1]">skipped</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="c7b8ac">  <td>24/10/03 16:53:15</td>   <td>1444</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.bank.tests.LoginTest@3b69e7d1]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
