--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="628f7b">  <td>24/10/03 11:12:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.bank.tests.LoginTest@3b69e7d1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="82f9e2">  <td>24/10/03 11:12:28</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithValidCredentials()[pri:1, instance:com.bank.tests.LoginTest@3b69e7d1]">loginWithValidCredentials</td> 
+<tr bgcolor="82f9e2">  <td>24/10/03 15:22:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithValidCredentials()[pri:1, instance:com.bank.tests.LoginTest@6150c3ec]">loginWithValidCredentials</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="82f9e2">  <td>24/10/03 11:12:28</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithInvalidCredentials()[pri:2, instance:com.bank.tests.LoginTest@3b69e7d1]">loginWithInvalidCredentials</td> 
+<tr bgcolor="82f9e2">  <td>24/10/03 15:22:39</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.skipped()[pri:0, instance:com.bank.tests.LoginTest@6150c3ec]">skipped</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/03 15:22:39</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithInvalidCredentials()[pri:2, instance:com.bank.tests.LoginTest@6150c3ec]">loginWithInvalidCredentials</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/03 15:22:39</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.bank.tests.LoginTest@6150c3ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/03 15:22:39</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.failure()[pri:3, instance:com.bank.tests.LoginTest@6150c3ec]">failure</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
