--- a/test-output/old/EbankingApp/classes.html
+++ b/test-output/old/EbankingApp/classes.html
@@ -11,11 +11,23 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginWithValidCredentials</td>
+<td>failure2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>failure</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>loginWithInvalidCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginWithValidCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>skipped</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
